--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a href="canvas/canvas.html">        Drawing Canvas
 </a>
         <a href="links/links.html">        Directory
-</a>
+</a><a href="codeblock/codeblock.html" style="background-color: rgb(40, 40, 40)">Codeblock Editor</a>
       </div>
     </header>
     <p>
