--- a/offline.html
+++ b/offline.html
@@ -20,7 +20,7 @@
         <a href="canvas/canvas.html">        Drawing Canvas
 </a>
         <a href="links/links.html">        Directory
-</a>
+</a><a href="codeblock/codeblock.html">Codeblock Editor</a>
       </div>
     </header>
   <body>
