--- a/links/links.html
+++ b/links/links.html
@@ -27,7 +27,7 @@
         <a href="../canvas/canvas.html">        Drawing Canvas
 </a>
         <a href="links.html" style="background-color: rgb(40, 40, 40)">        Directory
-</a>
+</a><a href="../codeblock/codeblock.html">Codeblock Editor</a>
       </div>
     </header>
     <div class="links_category">
