--- a/imagetolua/imagetolua.html
+++ b/imagetolua/imagetolua.html
@@ -27,9 +27,9 @@
         <a href="../canvas/canvas.html">        Drawing Canvas
 </a>
         <a href="../links/links.html">        Directory
-</a>
+</a><a href="../codeblock/codeblock.html">Codeblock Editor</a>
         <a href="help.html">        Help
-</a>
+</a
       </div>
     </header>
     <p>
