--- a/imagetolua/help.html
+++ b/imagetolua/help.html
@@ -27,7 +27,7 @@
         <a href="../canvas/canvas.html">        Drawing Canvas
 </a>
         <a href="../links/links.html">        Directory
-</a>
+</a><a href="../codeblock/codeblock.html">Codeblock Editor</a>
       </div>
     </header>
     <nav>
