--- a/canvas/canvas.html
+++ b/canvas/canvas.html
@@ -27,7 +27,7 @@
         <a href="canvas.html" style="background-color: rgb(40, 40, 40)">        Drawing Canvas
 </a>
         <a href="../links/links.html">        Directory
-</a>
+</a><a href="../codeblock/codeblock.html">Codeblock Editor</a>
         <a href="help.html">        Help
 </a>
         <!-- <a id="canvas_button">Canvas</a>
