--- a/codeblock/codeblock.html
+++ b/codeblock/codeblock.html
@@ -69,6 +69,8 @@
                 <input type="file" id="load_project" style="display:none" accept=".json">
             </div>
             <canvas id="codeblock_canvas"></canvas>
+            <!-- Inline Editor Overlay -->
+            <input type="text" id="inline_editor" style="display:none; position:absolute; z-index:100; font-family: 'Segoe UI', Tahoma, sans-serif; font-weight:bold; font-size:13px; border:2px solid #3498db; outline:none; background:white; padding:2px 5px;">
         </div>
 
         <!-- Output Code Panel -->
